# local-aws-glue-workflows

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
docker/: README.md  airflow.Dockerfile  docker-compose.yaml  glue-runner.Dockerfile  minio-init.sh  spark-defaults.conf
examples/simple-etl/: README.md  default_params.json  expected_dag.py  sample-input.csv
examples/simple-etl/scripts/: extract.py  load.py  transform.py
examples/simple-etl/terraform/: main.tf
glue-airflow-local/: README.md  pyproject.toml
glue-airflow-local/src/glue_airflow_local/: __init__.py  __main__.py  cli.py  exceptions.py  model.py  translator.py  validator.py
glue-airflow-local/src/glue_airflow_local/operators/: __init__.py  glue_docker.py  mock.py
glue-airflow-local/src/glue_airflow_local/parser/: __init__.py  glue.py  hcl.py  references.py
glue-airflow-local/tests/: conftest.py  test_cli.py  test_e2e_glue_docker.py  test_example_simple_etl.py  test_glue_docker_operator.py  test_mock_operator.py  test_model.py  test_parser_glue.py  test_parser_hcl.py  test_parser_references.py  test_translator.py  test_validator.py
glue-airflow-local/tests/fixtures/cyclic/: main.tf
glue-airflow-local/tests/fixtures/linear_chain/: main.tf
glue-airflow-local/tests/fixtures/parallel_branches/: main.tf
glue-airflow-local/tests/fixtures/scheduled/: main.tf
glue-airflow-local/tests/fixtures/single_ondemand/: main.tf
